# cppTAU

./: .gitignore  CMakeLists.txt  example.graph  genetic_algorithm.cpp  genetic_algorithm.h  main.cpp  partition.cpp  partition.h  random_chooser.cpp  random_chooser.h
igraph/etc/cmake/: version.cmake
igraph/include/: igraph.h
src/: CMakeLists.txt  main.cpp
src/genetic_algorithm/: CMakeLists.txt  genetic_algorithm.h
src/partition/: CMakeLists.txt  partition.cpp  partition.h
src/random_chooser/: CMakeLists.txt
